create a BMI calculator

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>BMI Calculator</title>
 </head>
 <body>
-
+<h1>BMI Calculator</h1>
+<form action="/bmicalculator" method="post">
+    <input type="text" name="weight" placeholder="weight">
+    <input type="text" name="height" placeholder="height">
+    <button type="submit" name="submit">Calculate BMI</button>
+</form>
 </body>
 </html>
